--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "interactive-visited-countries-map-react",
   "version": "0.1.0",
-  "homepage": "https://tomi5.github.io/visited-countries-map/",
+  "homepage": "http://localhost:9000/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.3",
+    "express": "^4.17.1",
     "gh-pages": "^3.1.0",
     "lodash.sortby": "^4.7.0",
     "normalize.css": "^8.0.1",
@@ -26,6 +27,7 @@
     "webfontloader": "^1.6.28"
   },
   "scripts": {
+    "prod": "node server/index.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "yarn run build",
@@ -35,6 +37,7 @@
     "format": "prettier --write src/**/*.ts{,x}",
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
   },
+  "proxy": "http://localhost:9000",
   "eslintConfig": {
     "extends": "react-app"
   },
