--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.3",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "gh-pages": "^3.1.0",
     "lodash.sortby": "^4.7.0",
     "normalize.css": "^8.0.1",
