--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "gh-pages": "^3.1.0",
     "lodash.sortby": "^4.7.0",
+    "mongodb": "^4.1.4",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
