--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0",
+    "express-session": "^1.17.2",
     "gh-pages": "^3.1.0",
     "lodash.sortby": "^4.7.0",
     "mongodb": "^4.1.4",
